moshkel hal shod,asami zire aksha gharar gereft:)

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
     <img src="1.jpg" id="img1" alt="">
     <img src="2.jpg" id="img2" alt="">
     <img src="3.jpg" id="img3" alt="">
-    <h1 id="h1" class="h1">دسته بندی محصولات</h1>
+    <h1 id="h1">دسته بندی محصولات</h1>
     <div>
-    <img src="slipp.jpg" class="i1 " alt="">
-    <img src="bag.jpg" class="i1 " alt="">
-    <img src="sport.jpeg" class="i1 " alt="">
-    <img src="every.jpeg" class="i1 " alt="">
-    <img src="official.jpeg" class="i1 " alt="">
-    <img src="woman.jpg" class="i1 " alt="">
-    <img src="man.jpeg" class="i1 " alt="">
-    <img src="child.jpeg" class="i1 " alt="">
+        <img src="slipp.jpg" class="i1 " alt="">
+        <img src="bag.jpg" class="i1 " alt="">
+        <img src="sport.jpeg" class="i1 " alt="">
+        <img src="every.jpeg" class="i1 " alt="">
+        <img src="official.jpeg" class="i1 " alt="">
+        <img src="woman.jpg" class="i1 " alt="">
+        <img src="man.jpeg" class="i1 " alt="">
+        <img src="child.jpeg" class="i1 " alt="">
     </div>
     <div1>
-        <a href="">دمپایی و صندل</a>
-        <a href="">کیف و اکسسوری</a>
-        <a href="">ورزشی</a>
-        <a href="">روزمره</a>
-        <a href="">رسمی</a>
-        <a href="">زنانه</a>
-        <a href="">مردانه</a>
-        <a href="" class="a2">بچگانه</a>
+        <p id="a2">دمپایی و صندل</p>
+        <p id="a3">کیف و اکسسوری</p>
+        <p id="a4">ورزشی</p>
+        <p id="a5">روزمره</p>
+        <p id="a6">رسمی</p>
+        <p id="a7">زنانه</p>
+        <p id="a8">مردانه</p>
+        <p id="a9">بچگانه</p>
     </div1>
 
     
